@@ -1,11 +1,19 @@
 require 'spec_helper'
 
 describe Paperclip::UriAdapter do
+  let(:content_type) { "image/png" }
+  let(:meta) { {} }
+
+  before do
+    @open_return = StringIO.new("xxx")
+    @open_return.stubs(:content_type).returns(content_type)
+    @open_return.stubs(:meta).returns(meta)
+    Paperclip::UriAdapter.any_instance.
+      stubs(:download_content).returns(@open_return)
+  end
+
   context "a new instance" do
     before do
-      @open_return = StringIO.new("xxx")
-      @open_return.stubs(:content_type).returns("image/png")
-      Paperclip::UriAdapter.any_instance.stubs(:download_content).returns(@open_return)
       @uri = URI.parse("http://thoughtbot.com/images/thoughtbot-logo.png")
       @subject = Paperclip.io_adapters.for(@uri)
     end
@@ -56,8 +64,9 @@ describe Paperclip::UriAdapter do
   end
 
   context "a directory index url" do
+    let(:content_type) { "text/html" }
+
     before do
-      Paperclip::UriAdapter.any_instance.stubs(:download_content).returns(StringIO.new("xxx"))
       @uri = URI.parse("http://thoughtbot.com")
       @subject = Paperclip.io_adapters.for(@uri)
     end
@@ -73,7 +82,6 @@ describe Paperclip::UriAdapter do
 
   context "a url with query params" do
     before do
-      Paperclip::UriAdapter.any_instance.stubs(:download_content).returns(StringIO.new("xxx"))
       @uri = URI.parse("https://github.com/thoughtbot/paperclip?file=test")
       @subject = Paperclip.io_adapters.for(@uri)
     end
@@ -83,9 +91,26 @@ describe Paperclip::UriAdapter do
     end
   end
 
+  context "a url with content disposition headers" do
+    let(:file_name) { "test_document.pdf" }
+    let(:meta) do
+      {
+        "content-disposition" => "attachment; filename=\"#{file_name}\";",
+      }
+    end
+
+    before do
+      @uri = URI.parse("https://github.com/thoughtbot/paperclip?file=test")
+      @subject = Paperclip.io_adapters.for(@uri)
+    end
+
+    it "returns a file name" do
+      assert_equal file_name, @subject.original_filename
+    end
+  end
+
   context "a url with restricted characters in the filename" do
     before do
-      Paperclip::UriAdapter.any_instance.stubs(:download_content).returns(StringIO.new("xxx"))
       @uri = URI.parse("https://github.com/thoughtbot/paper:clip.jpg")
       @subject = Paperclip.io_adapters.for(@uri)
     end
